fix (programming card layering): corrert z-index

--- a/src/styles/partials/exploration.scss
+++ b/src/styles/partials/exploration.scss
@@ -1,7 +1,7 @@
 #exploration-wrapper {
   position: absolute;
   top: 820vh;
-  z-index: 300;
+  z-index: 320;
   display: flex;
   flex-direction: column;
   height: 680vh;
